        into one single dynamic button.
      + Improved command tool.  The command tool is now always
        auto-raised and comes with window manager decorations.
      + The `Windows' menu is now called `View', complying with the
        Motif style guide.
      + Options are now grouped according to their functionality.  The
        `Options' menu has gone.  Use `Edit' instead.
      DDD now requires less width and height.  If you already have a
      `~/.dddinit' file, resize DDD manually and save options.
    - Support for debugging processes running outside of DDD.  You can
      attach to a running process, examine it, and resume its execution.
    - Improved online manuals:
      + Multiple manual browsers are supported.
      + Manual browsers are realized as top-level windows.
      + DDD no longer blocks while the manual is uncompressed and formatted.
      + DDD manuals are now stored in `gzip' format, saving space in
        executables.
    - New `What Next' help.  Gives a hint on what to do next,
      depending on current state.  Useful for beginners.
    - User-defined DDD commands.  DDD now provides a simple facility
      that allows the inferior debugger to execute DDD commands.  For
      details, see `User-Defined Commands' in the DDD manual.

    Bug fixes:
    - Various fixes for XDB on HP-UX 10.x included.  Thanks to Robert
      Wiegand <wiegand@kong.gsfc.nasa.gov>.


DDD 2.1.1
---------

    DDD 2.1.1 includes some hacks that make DDD run with LessTif, a
    free Motif clone, without loss of functionality.  DDD now no more
    depends on proprietary software like OSF/Motif.

    Apart from these hacks, functionality is unchanged with respect to
    DDD 2.1 (no new features, no bug fixes).  If you have DDD 2.1 up
    and running, there is no need to upgrade to DDD 2.1.1.

    As of this release, DDD is included in GNU CD-ROMs by the Free
    Software Foundation (aka the GNU people).  DDD distributions are